--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+        <maven.compiler.release>17</maven.compiler.release>
         <logback.version>1.4.14</logback.version>
         <jetty.version>12.0.16</jetty.version>
 
